--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)file:///Users/vanessamhanna/Tools/clusTCR/Report.html -->
+<!-- saved from url=(0088)file:///Users/vanessamhanna/Library/CloudStorage/OneDrive-Personal/Documents/report.html -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -59,30 +59,30 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </style>
 
 
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/clipboard.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/quarto.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/popper.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/tippy.umd.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/anchor.min.js"></script>
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/tippy.css" rel="stylesheet">
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/quarto-syntax-highlighting.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
+<script src="./index_files/clipboard.min.js"></script>
+<script src="./index_files/quarto.js"></script>
+<script src="./index_files/popper.min.js"></script>
+<script src="./index_files/tippy.umd.min.js"></script>
+<script src="./index_files/anchor.min.js"></script>
+<link href="./index_files/tippy.css" rel="stylesheet">
+<link href="./index_files/quarto-syntax-highlighting.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
 <link href="file:///Users/vanessamhanna/Tools/clusTCR/script_files/libs/quarto-html/quarto-syntax-highlighting-dark.css" rel="prefetch" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/bootstrap.min.js"></script>
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/bootstrap-icons.css" rel="stylesheet">
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/bootstrap.min.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<script src="./index_files/bootstrap.min.js"></script>
+<link href="./index_files/bootstrap-icons.css" rel="stylesheet">
+<link href="./index_files/bootstrap.min.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
 <link href="file:///Users/vanessamhanna/Tools/clusTCR/script_files/libs/bootstrap/bootstrap-dark.min.css" rel="prefetch" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/fonts-embed.css" rel="stylesheet">
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/shim.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/react.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/react-dom.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/react-tools.js"></script>
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/fill.css" rel="stylesheet">
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/htmlwidgets.js"></script>
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/reactable.css" rel="stylesheet">
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/reactable.js"></script>
-<link href="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/vis-network.min.css" rel="stylesheet">
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/vis-network.min.js"></script>
-<script src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/visNetwork.js"></script>
+<link href="./index_files/fonts-embed.css" rel="stylesheet">
+<script src="./index_files/shim.min.js"></script>
+<script src="./index_files/react.min.js"></script>
+<script src="./index_files/react-dom.min.js"></script>
+<script src="./index_files/react-tools.js"></script>
+<link href="./index_files/fill.css" rel="stylesheet">
+<script src="./index_files/htmlwidgets.js"></script>
+<link href="./index_files/reactable.css" rel="stylesheet">
+<script src="./index_files/reactable.js"></script>
+<link href="./index_files/vis-network.min.css" rel="stylesheet">
+<script src="./index_files/vis-network.min.js"></script>
+<script src="./index_files/visNetwork.js"></script>
 
 
 <style type="text/css">div.vis-tooltip {display : none}</style><style type="text/css">div.vis-tooltip {display : none}</style></head>
@@ -446,7 +446,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unique-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unique-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 1: Boxplots showing the number of unique paired CDR3a-CDR3b clones identified in each sample. Samples are represented by the points, and the boxplots show the distribution across all samples in each patient. Patients 35 to 52 have one sequenced sample for each condition.</figcaption>
 </figure>
 </div>
@@ -479,7 +479,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/intervals-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/intervals-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 2: Stacked bars showing the distribution of paired CDR3a-CDR3b clones within each interval in each sample. On the x axis, the bottom row represent the patient id, the middle row shows the different aliquots, when available, and the upper row the sample id, which includes the tissue type, patient id and aliquot number.</figcaption>
 </figure>
 </div>
@@ -509,7 +509,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/jaccard CD4-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/jaccard CD4-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 3: A heatmap showing the Jaccard distances calculated at the paired CDR3a-CDR3b level between all CD4+ samples. The ward D2 method was used to perform the hierarchical clustering.</figcaption>
 </figure>
 </div>
@@ -528,7 +528,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/jaccard CD8-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/jaccard CD8-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 4: A heatmap showing the Jaccard distances calculated at the paired CDR3a-CDR3b level between all CD8+ samples. The ward D2 method was used to perform the hierarchical clustering.</figcaption>
 </figure>
 </div>
@@ -548,7 +548,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/morisita CD4-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/morisita CD4-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 5: A heatmap showing the Morisita distances calculated at the paired CDR3a-CDR3b level between all CD4+ samples. The ward D2 method was used to perform the hierarchical clustering.</figcaption>
 </figure>
 </div>
@@ -567,7 +567,7 @@ color: grey;
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/morisita CD8-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/morisita CD8-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 6: A heatmap showing the Morisita distances calculated at the paired CDR3a-CDR3b level between all CD8+ samples. The ward D2 method was used to perform the hierarchical clustering.</figcaption>
 </figure>
 </div>
@@ -586,7 +586,7 @@ color: grey;
 <p>To perform this analysis, I used ClusTCR, an unsupervised clustering method that can efficiently classify large sets of CDR3 sequences into similarity group, potentially recognizing same antigen epitopes .</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/clustcr_workflow.jpg" class="img-fluid figure-img"></p>
+<p><img src="./index_files/clustcr_workflow.jpg" class="img-fluid figure-img"></p>
 <figcaption>Workflow of ClusTCR</figcaption>
 </figure>
 </div>
@@ -772,7 +772,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-1-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-1-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 7: Density distribution of TME-enriched cluster size in the TRA and TRB repertoires.</figcaption>
 </figure>
 </div>
@@ -827,7 +827,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/logo a-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/logo a-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 9: TRA sequence logo were drawn for each of the top 5 clusters with the highest number of sequences.</figcaption>
 </figure>
 </div>
@@ -870,7 +870,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/logo b-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/logo b-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 11: TRB sequence logo were drawn for each of the top 5 clusters with the highest number of sequences.</figcaption>
 </figure>
 </div>
@@ -955,7 +955,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 12: Euclidean distances were calculated on the four features between all pairwise samples within the dataset and used to perform a multidimensional scaling analysis</figcaption>
 </figure>
 </div>
@@ -970,7 +970,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 13: Boxplots showing the four physico-chemical properties of sequences in TME-enriched and non-enriched clusters. A wilcoxon-test was applied.</figcaption>
 </figure>
 </div>
@@ -1017,7 +1017,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-4-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-4-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 14: Boxplots showing the percentage of enriched sequences beloging to the CD4+ or CD8+ cell subset in each patient.</figcaption>
 </figure>
 </div>
@@ -1062,7 +1062,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-5-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-5-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 15: Boxplots showing the percentage of enriched sequences beloging to each patient..</figcaption>
 </figure>
 </div>
@@ -1122,7 +1122,7 @@ clustering completed</code></pre>
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="./TCR ASSESSMENT for Computational Biologist (Single Cell Genomics) Role_files/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="864"></p>
+<p><img src="./index_files/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="864"></p>
 <figcaption>Figure 16: Boxplots showing the occurrence (in percentage) of enriched sequences in the initial repertoires of each patient.</figcaption>
 </figure>
 </div>
